--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,4 +1,3 @@
-# For more information: https://laravel.com/docs/sail
 version: '3.7'
 services:
     cms:
@@ -7,8 +6,7 @@ services:
             dockerfile: docker/php-fpm/Dockerfile
             args:
                 WWWGROUP: '${WWWGROUP}'
-        #image: sail-8.1/cms
-        container_name: ${APP_SERVICE}-cms
+        container_name: '${APP_SERVICE}-cms'
         extra_hosts:
             - 'host.docker.internal:host-gateway'
         ports:
@@ -17,9 +15,9 @@ services:
         environment:
             WWWUSER: '${WWWUSER}'
             LARAVEL_SAIL: 1
-            APP_ENV: 'local'
+            APP_ENV: local
             APP_DEBUG: true
-            PHP_DATE_TIMEZONE: ${PHP_DATE_TIMEZONE:-UTC}
+            PHP_DATE_TIMEZONE: '${PHP_DATE_TIMEZONE:-UTC}'
         volumes:
             - '.:/srv/cms'
         networks:
@@ -28,7 +26,6 @@ services:
         image: 'postgres:14'
         ports:
             - '${FORWARD_DB_PORT:-5432}:5432'
-            # port for external connection by DBeaver
             - '5431:5432'
         environment:
             PGPASSWORD: '${DB_PASSWORD:-secret}'
@@ -41,12 +38,45 @@ services:
         networks:
             - sail
         healthcheck:
-            test: ["CMD", "pg_isready", "-q", "-d", "${DB_DATABASE}", "-U", "${DB_USERNAME}"]
+            test:
+                - CMD
+                - pg_isready
+                - '-q'
+                - '-d'
+                - '${DB_DATABASE}'
+                - '-U'
+                - '${DB_USERNAME}'
+            retries: 3
+            timeout: 5s
+    mysql:
+        image: 'mysql/mysql-server:8.0'
+        ports:
+            - '${FORWARD_DB_PORT:-3306}:3306'
+        environment:
+            MYSQL_ROOT_PASSWORD: '${DB_PASSWORD}'
+            MYSQL_ROOT_HOST: '%'
+            MYSQL_DATABASE: '${DB_DATABASE}'
+            MYSQL_USER: '${DB_USERNAME}'
+            MYSQL_PASSWORD: '${DB_PASSWORD}'
+            MYSQL_ALLOW_EMPTY_PASSWORD: 1
+        volumes:
+            - 'sail-mysql:/var/lib/mysql'
+            - './vendor/laravel/sail/database/mysql/create-testing-database.sh:/docker-entrypoint-initdb.d/10-create-testing-database.sh'
+        networks:
+            - sail
+        healthcheck:
+            test:
+                - CMD
+                - mysqladmin
+                - ping
+                - '-p${DB_PASSWORD}'
             retries: 3
             timeout: 5s
 networks:
-  sail:
-      driver: bridge
+    sail:
+        driver: bridge
 volumes:
-  sail-pgsql:
-    driver: local
+    sail-pgsql:
+        driver: local
+    sail-mysql:
+        driver: local
